# cloudflare-dyndns

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  cloudflare-dyndns.example.conf  cloudflare-dyndns.example.toml  cloudflare-dyndns.service  cloudflare-dyndns.sh  cloudflare-dyndns.timer  install.sh  last-ip  ryndns.example.toml  ryndns.service  service  timer  uninstall.sh  vimexx-dyndns.sh  vimexx.sh
.PKGBUILD/: PKGBUILD  cloudflare-dyndns.conf  service
docs/superpowers/plans/: 2026-06-24-ryndns-bunny-support.md
docs/superpowers/specs/: 2026-06-24-bunny-net-support-design.md
src/: args.rs  cli.rs  cloudflare.rs  config.rs  fs.rs  ip.rs  lib.rs  main.rs  network.rs  public_ip.rs  state.rs
src/bunny_api/: mod.rs  record.rs  zone.rs
src/cli/: dyndns.rs  list_zones.rs  mod.rs  public_ip.rs
src/cli/dyndns/: args.rs  cli.rs  mod.rs  paths.rs  settings.rs
src/cloudflare_api/: endpoints.rs  mod.rs  record.rs  zone.rs
src/config/: args.rs  env.rs  fs.rs  ip.rs  mod.rs  paths.rs  settings.rs  zone.rs
src/ip/: address.rs  mod.rs  query.rs
src/ip_cache/: fs.rs  mod.rs
src/provider/: bunny.rs  cloudflare.rs  mod.rs
src/public_ip/: ip_cache.rs  mod.rs
test/: example.toml
