[package]
description = "Dynamic DNS for CloudFlare."
edition = "2024"
license = "BSD 3-Clause"
name = "cloudflare-dyndns"
repository = "https://github.com/Hellrespawn/cloudflare-dyndns"
version = "0.9.0"
default-run = "cloudflare-dyndns"

[package.metadata.cargo-machete]
ignored = ["strum"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cloudflare-dyndns"
path = "src/bin/main.rs"

[dependencies]
camino = "1.1.12"
clap = { version = "4.5.46", features = ["derive"] }
color-eyre = "0.6.5"
derive_builder = "0.20.2"
dirs = "6.0.0"
fs-err = "3.1.1"
indexmap = { version = "2.11.0", features = ["serde"] }
reqwest = { version = "0.12.23", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
toml = { version = "0.9.5", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["user"] }
