[package]
description = "Dynamic DNS for Cloudflare and bunny.net."
edition = "2024"
license = "BSD 3-Clause"
name = "ryndns"
repository = "https://github.com/Hellrespawn/cloudflare-dyndns"
version = "0.10.0"
default-run = "ryndns"

[package.metadata.cargo-machete]
ignored = ["strum"]

[[bin]]
name = "ryndns"
path = "src/bin/main.rs"

[dependencies]
camino = "1.2.2"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
derive_builder = "0.20.2"
dirs = "6.0.0"
fs-err = "3.3.0"
indexmap = { version = "2.11.0", features = ["serde"] }
reqwest = { version = "0.13.4", features = [
    "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
toml = { version = "1.1.2", features = ["preserve_order"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["user"] }
